# xreal-glasses-astronomy

./: README.md  app.py  config.py  diagnose_imu_axes.py  mag_calibration.json  mathlib.py  probe_imu.py  pyproject.toml
docs/superpowers/plans/: 2026-06-21-real-sky-alignment.md  2026-06-21-xreal-sky.md
docs/superpowers/specs/: 2026-06-21-real-sky-alignment-design.md  2026-06-21-xreal-sky-design.md
imu/: fusion.py  magcal.py  reader.py
render/: labels.py  scene.py
sky/: catalog.py  coords.py  declination.py  ephemeris.py  heading.py  location.py
tests/: test_catalog.py  test_coords.py  test_declination.py  test_ephemeris.py  test_fusion.py  test_heading.py  test_imu_axes.py  test_location.py  test_magcal.py  test_mathlib.py  test_reader.py  test_render_math.py
