[project]
name = "xreal-sky"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "moderngl>=5.12.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pygame>=2.6.1",
    "pygeomag>=1.1.0",
    "skyfield>=1.54",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
